# AI-Trends-ChatBot

./: .env.template  .gitignore  README.md  Report.md  microsoft  notes.md  requirements.txt
data-pipeline/: .gitignore  README.md  pyproject.toml
data-pipeline/src/Scraper/: data-scraper.py
data-pipeline/src/silver_layer/chunks.parquet/: .part-00000-b976ada1-6129-4809-934a-088efe66812b-c000.snappy.parquet.crc  part-00000-b976ada1-6129-4809-934a-088efe66812b-c000.snappy.parquet
end-to-end-azure-data-pipeline/: README.md  pyproject.toml
end-to-end-azure-data-pipeline/src/: .gitignore
end-to-end-azure-data-pipeline/src/Data_transformation/first_approach/: README.md  bronzeTosilver.ipynb  silverTogold.ipynb
end-to-end-azure-data-pipeline/src/Data_transformation/seconde_approach/: README.md  bronze2silver.ipynb  silver2gold.ipynb
end-to-end-azure-data-pipeline/src/scraper-function/: README.md  function_app.py  requirements.txt
end-to-end-azure-data-pipeline/src/scraper-function/AuthFactory/: AuthDBFactory.py  __init__.py
end-to-end-azure-data-pipeline/src/scraper-function/utils/: DBservices.py  __init__.py  scraping_process.py
rss-scrapers/: inspect_feeds.py  pyproject.toml  requirements.txt  rss_data_exploration.ipynb  test.py
rss-scrapers/amazon_science/: scraper.py
rss-scrapers/common/: base_scraper.py
rss-scrapers/google_ai/: scraper.py
rss-scrapers/google_deepmind/: scraper.py
rss-scrapers/ieee_spectrum/: scraper.py
rss-scrapers/microsoft_research/: scraper.py
rss-scrapers/mit_news/: scraper.py
rss-scrapers/tech_crunch/: scraper.py
(+85 files in other folders)
